--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,6 +1,6 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
@@ -10,7 +10,7 @@
     </ng-container>-->
 
     <ng-container matColumnDef="twitterhandle">
-        <th mat-header-cell *matHeaderCellDef> Twitterhandle </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Twitterhandle </th>
         <td mat-cell *matCellDef="let element"> {{element.twitterhandle}} </td>
     </ng-container>
 
