--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -10,10 +10,10 @@
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
-    <!--<ng-container matColumnDef="dateOfBirth">
-      <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
-      <td mat-cell *matCellDef="let element"> {{element.dateOfBirth | date}} </td>
-    </ng-container>-->
+    <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef> Image </th>
+        <td mat-cell *matCellDef="let element"><img src="{{element.image}}" style="width:35px;height:35px;"> </td>
+    </ng-container>
 
     <ng-container matColumnDef="twitterhandle">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Twitterhandle </th>
@@ -50,5 +50,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+<mat-paginator [pageSize]="6" [pageSizeOptions]="[2, 4, 6, 10, 20]">
 </mat-paginator>
