--- a/src/app/shared/dialogs/error-dialog/error-dialog.component.html
+++ b/src/app/shared/dialogs/error-dialog/error-dialog.component.html
@@ -1,1 +1,9 @@
-<p>error-dialog works!</p>
+<section fxLayout="column" fxLayoutAlign="center center">
+    <h1 mat-dialog-title>Error message</h1>
+    <mat-dialog-content>
+        <p>{{data.errorMessage}}</p>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-raised-button color="warn" (click)="closeDialog()">OK</button>
+    </mat-dialog-actions>
+</section>
