Added Aperos List

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,15 +5,19 @@
         </button>
     </div>
     <div>
-        <a routerLink="/home">User-Account</a>
+        <a routerLink="/home">#virtualApero</a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
             <li>
-                <a routerLink="/user/users">User Actions</a>
+                <a routerLink="/apero/aperos">Aperos</a>
             </li>
             <li>
-                <a routerLink="/account">Account Actions</a>
+                <a routerLink="/user/users">Teilnehmer</a>
+            </li>
+
+            <li>
+                <a routerLink="/account">Login</a>
             </li>
         </ul>
     </div>
