--- a/src/app/apero/apero-list/apero-list.component.html
+++ b/src/app/apero/apero-list/apero-list.component.html
@@ -1,12 +1,23 @@
-<table mat-table [dataSource]="dataSource">
+<div fxLayout fxLayoutAlign="center center">
+    <mat-form-field fxFlex="40%">
+        <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort>
     <!-- <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>-->
 
     <ng-container matColumnDef="datum">
-        <th mat-header-cell *matHeaderCellDef> Datum </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Datum </th>
         <td mat-cell *matCellDef="let element"> {{element.datum}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef> Image </th>
+        <td mat-cell *matCellDef="let element"><img src="{{element.image}}" style="width:35px;height:35px;"> </td>
     </ng-container>
 
     <!--<ng-container matColumnDef="address">
@@ -44,3 +55,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+</mat-paginator>
