--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,7 +5,7 @@
         </button>
     </div>
     <div>
-        <a routerLink="/home">#virtualApero</a>
+        <a routerLink="/home">virtualApero</a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
