--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -3,9 +3,9 @@
     <mat-form-field fxFlex="40%">
         <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
-    <div>
+    <!--<div>
         <a [routerLink]="['/user/create']" mat-button color="primary">Erstelle neuen Benutzer</a>
-    </div>
+    </div>-->
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
@@ -33,7 +33,7 @@
         </td>
     </ng-container>
 
-    <ng-container matColumnDef="update">
+   <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef> Update </th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
