--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -3,9 +3,9 @@
     <mat-form-field fxFlex="40%">
         <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
-    <!--<div>
+    <div>
         <a [routerLink]="['/user/create']" mat-button color="primary">Erstelle neuen Benutzer</a>
-    </div>-->
+    </div>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
@@ -24,7 +24,7 @@
         <td mat-cell *matCellDef="let element"> {{element.twitterhandle}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="details">
+   <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> Details </th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary" (click)="redirectToDetails(element.id)">
@@ -54,5 +54,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSize]="6" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+<mat-paginator [pageSize]="20" [pageSizeOptions]="[2, 4, 6, 10, 20]">
 </mat-paginator>
