refactored apero-list and apero-details for new drupal api

--- a/src/app/apero/apero-details/apero-data/apero-data.component.html
+++ b/src/app/apero/apero-details/apero-data/apero-data.component.html
@@ -3,59 +3,39 @@
     <mat-card fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Apero Details vom </mat-card-title>
-            <mat-card-subtitle>{{apero?.datum}}</mat-card-subtitle>
+            <mat-card-title>Das war der {{apero[0].titel}} vom {{apero[0].datum}}</mat-card-title>
         </mat-card-header>
     </mat-card>
 </div>
 <div class="basiccontainer" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around start"
     fxLayoutGap="25px">
     <mat-card fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)">
-        <img mat-card-image src=" {{apero?.image}}" alt="Photo of virtualApero from {{apero?.datum}}">
-        <mat-card-content>
-
-        </mat-card-content>
+        <mat-card-header>
+            <mat-card-title>Teilnehmer</mat-card-title>
+            <mat-card-subtitle>{{apero[0].teilnehmer}}</mat-card-subtitle>
+        </mat-card-header>
     </mat-card>
+    
+</div>
+<div class="basiccontainer" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around start"
+    fxLayoutGap="25px">
     <mat-card fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)">
         <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Teilnehmer</mat-card-title>
-            <mat-card-subtitle></mat-card-subtitle>
+            <mat-card-title>Wer durfte, konnte, sollte?</mat-card-title>
+            <mat-card-subtitle>{{apero[0].willkommen}}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content *ngFor="let t of apero?.teilnehmer">
-            <!--<mat-card-content *ngFor="let t of apero?.teilnehmer">
-            <p *ngFor="let user of users; let t=index">
-                {{user}}
-            </p>-->
-            {{t}}
-        </mat-card-content>
-
-        <!--</mat-card-content>-->
     </mat-card>
 </div>
 <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center" fxLayoutGap="25px">
-    <mat-card *ngFor="let th of apero?.themen" fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)">
-        <mat-card-header>
-            <mat-card-title>{{th.name}}</mat-card-title>
-            <mat-card-subtitle></mat-card-subtitle>
-        </mat-card-header>
+    <mat-card fxFlex="calc(33%-25px)" fxFlex.sm="calc(50%-25px)">
         <mat-card-content>
             <mat-card fxLayout="column" fxLayoutGap="20px">
                 <mat-card class="child-1">
                     <mat-card-header>
-                        <mat-card-title>Beschreibung</mat-card-title>
-                        <mat-card-subtitle>{{th.description}}</mat-card-subtitle>
+                        <mat-card-title>Inhalt</mat-card-title>
+                        <mat-card-subtitle>{{apero[0].inhalt}}</mat-card-subtitle>
                     </mat-card-header>
 
-                </mat-card>
-
-                <mat-card class="child-2">
-                    <mat-card-header>
-                        <mat-card-title>Links zu Informationen</mat-card-title>
-                    </mat-card-header>
-                    <mat-nav-list>
-                        <a mat-list-item href="{{l.url}}" *ngFor="let l of th.links"> {{ l.linkname }} </a>
-                    </mat-nav-list>
                 </mat-card>
 
             </mat-card>
