--- a/src/app/apero/apero-list/apero-list.component.html
+++ b/src/app/apero/apero-list/apero-list.component.html
@@ -5,25 +5,16 @@
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
-    <!-- <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>-->
+
+    <ng-container matColumnDef="titel">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
+        <td mat-cell *matCellDef="let element"> {{element.titel}}</td>
+    </ng-container>
 
     <ng-container matColumnDef="datum">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Datum </th>
+        <th mat-header-cell *matHeaderCellDef > Datum </th>
         <td mat-cell *matCellDef="let element"> {{element.datum}} </td>
     </ng-container>
-
-    <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef> Image </th>
-        <td mat-cell *matCellDef="let element"><img src="{{element.image}}" style="width:35px;height:35px;"> </td>
-    </ng-container>
-
-    <!--<ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef> Address </th>
-        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-    </ng-container>-->
 
     <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> Details </th>
@@ -34,26 +25,8 @@
         </td>
     </ng-container>
 
-    <ng-container matColumnDef="update">
-        <th mat-header-cell *matHeaderCellDef> Update </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
-                <mat-icon class="mat-18">system_update</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
-    <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="redirectToDelete(element.id)">
-                <mat-icon class="mat-18">delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+<mat-paginator [pageSize]="20" [pageSizeOptions]="[2, 4, 6, 10, 20]">
 </mat-paginator>
