--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,17 @@
 <section fxLayout="column" fxFlexAlign="stretch">
     <div fxFlexAlign="center">
-        <p>Welcome to the Material Angular OwnerAccount Application</p>
+        <p>Willkommen bei unserem ersten Versuch, den VirtualApero als progressive WebApp in Angular zu erstellen</p>
     </div>
-    <p>In this application we are going to work with:</p>
+    <p>In dieser Applikation arbeiten wir mit:</p>
     <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
         <mat-tab label="Material Components">
             <p>We are going to use different material components to create nice looking angular app.</p>
         </mat-tab>
         <mat-tab label="Consume .NET Core Web API">
-            <p>We will consume our .NET Core application. Basically, we will create complete CRUD client app.</p>
+            <p>Wir benutzen die von Drupal bereitgestellte API zunächst einmal nur mit GET. Später sollen auch andere REST-Methoden zum Einsatz kommen.</p>
         </mat-tab>
         <mat-tab label="Fully responsive navigation menu">
-            <p>By using material components, we are going to create fully responsive navigation menu, with its side-bar
-                as well.</p>
+            <p>Wir nutzen Material Design für Angular.</p>
         </mat-tab>
     </mat-tab-group>
 </section>
