--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -9,13 +9,13 @@
         <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Teilnehmer</span>
     </a>
 
-    <mat-list-item [matMenuTriggerFor]="menu">
+   <!-- <mat-list-item [matMenuTriggerFor]="menu">
         <mat-icon>unfold_more</mat-icon>
         <a matline>Example</a>
     </mat-list-item>
     <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="onSidenavClose()">View profile</button>
         <button mat-menu-item (click)="onSidenavClose()">Add contact</button>
-    </mat-menu>
+    </mat-menu>-->
 
 </mat-nav-list>
