--- a/src/app/apero/apero-list/apero-list.component.html
+++ b/src/app/apero/apero-list/apero-list.component.html
@@ -4,7 +4,7 @@
     </mat-form-field>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource" class="responsive-table" matSort>
 
     <ng-container matColumnDef="titel">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
