--- a/src/app/user/user-list/user-list.component.css
+++ b/src/app/user/user-list/user-list.component.css
@@ -2,7 +2,7 @@ table {
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  min-width: 500px;
+  /*min-width: 500px;*/
 }
 
 th.mat-header-cell {
