--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -3,9 +3,9 @@
     <mat-form-field fxFlex="40%">
         <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
-    <div>
+   <!-- <div>
         <a [routerLink]="['/user/create']" mat-button color="primary">Erstelle neuen Benutzer</a>
-    </div>
+    </div>-->
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort>
@@ -19,10 +19,10 @@
         <td mat-cell *matCellDef="let element"><img src="{{element.image}}" style="width:35px;height:35px;"> </td>
     </ng-container>
 
-    <ng-container matColumnDef="twitterhandle">
+   <!-- <ng-container matColumnDef="twitterhandle">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Twitterhandle </th>
         <td mat-cell *matCellDef="let element"> {{element.twitterhandle}} </td>
-    </ng-container>
+    </ng-container>-->
 
    <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> Details </th>
@@ -33,7 +33,7 @@
         </td>
     </ng-container>
 
-   <ng-container matColumnDef="update">
+  <!-- <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef> Update </th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="accent" (click)="redirectToUpdate(element.id)">
@@ -49,7 +49,7 @@
                 <mat-icon class="mat-18">delete</mat-icon>
             </button>
         </td>
-    </ng-container>
+    </ng-container>-->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
