changed some texts on home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,13 +4,13 @@
     </div>
     <p>In dieser Applikation arbeiten wir mit:</p>
     <mat-tab-group (selectedTabChange)="executeSelectedChange($event)">
-        <mat-tab label="Material Components">
-            <p>We are going to use different material components to create nice looking angular app.</p>
+        <mat-tab label="Material Komponenten">
+            <p>Wir nutzen Material Komponenten für Angular, um der App ein ansehnliches Aussehen zu geben.</p>
         </mat-tab>
-        <mat-tab label="Consume .NET Core Web API">
+        <mat-tab label="Web API von Drupal">
             <p>Wir benutzen die von Drupal bereitgestellte API zunächst einmal nur mit GET. Später sollen auch andere REST-Methoden zum Einsatz kommen.</p>
         </mat-tab>
-        <mat-tab label="Fully responsive navigation menu">
+        <mat-tab label="Voll responsives Navigations-Menü">
             <p>Wir nutzen Material Design für Angular.</p>
         </mat-tab>
     </mat-tab-group>
